--- a/styles/FlowBox.module.css
+++ b/styles/FlowBox.module.css
@@ -53,7 +53,6 @@
 }
 .flowBoxMainFlow {
   letter-spacing: 0.16em;
-  color: #dddddd;
   position: relative;
   display: flex;
   align-items: center;
@@ -78,6 +77,7 @@
   align-items: center;
 }
 .flowBoxRow a {
+  color: #dddddd;
   padding: 10px;
   text-decoration: none;
   display: flex;
@@ -87,7 +87,7 @@
   scale: 1;
   align-items: center;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 19px;
   width: 100%;
 }
